# cents

./: .env.example  .gitignore  README.md  expense-tracker-spec.md  package-lock.json  package.json  playwright.config.ts  typedoc.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: oauth-feature.md
.github/workflows/: ci.yml  deploy.yml  pr.yml  release.yml
hf-spaces/: Dockerfile  README.md  app.py  requirements.txt
ocr-service/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/(auth)/: layout.tsx
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/actions/: recurring.ts
src/components/budgets/: BudgetFormDialog.tsx  DeleteBudgetButton.tsx
src/components/categories/: CategoryCard.tsx  CategoryFormDialog.tsx
src/components/dashboard/: BudgetProgress.tsx  CategoryDonut.tsx  RecentExpenses.tsx  Sidebar.tsx  SpendingChart.tsx  SpendingChartWrapper.tsx  WeeklyStats.tsx
src/components/expenses/: DeleteExpenseButton.tsx  ExpenseFilters.tsx  ExpenseForm.tsx  ExportButton.tsx  ReceiptScanner.tsx  RecurringExpensesManager.tsx
src/components/settings/: DangerZone.tsx  DataManagement.tsx  PreferencesForm.tsx  ProfileForm.tsx
src/components/ui/: badge.tsx  (+10 more)
src/hooks/: useExpenseFilters.ts
src/lib/: categories.ts  receiptParser.ts  searchUtils.ts  utils.ts
src/types/: database.ts
tests/: aggregation.spec.ts  auth.spec.ts  dashboard.spec.ts  example.spec.ts  expenses.spec.ts
tests/mocks/: supabase-mock.ts
(+15 files in other folders)
