[project]
name = "expensely-ocr"
version = "0.1.0"
description = "PaddleOCR-based receipt scanning microservice for Expensely"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "paddlepaddle==2.6.2",
    "paddleocr==2.7.3",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "setuptools>=65.0.0",
    "numpy<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]
